      the documentation.


Sarissa was inspired by articles and code available on the web, most notably 
the IE Emu Series [http://webfx.eae.net/dhtml/ieemu/] and Cross-Browser DOM 
Wrapper [http://www.webreference.com/programming/javascript/domwrapper/].
 
################################################################################################

0.9.9.1
    * Added table utilities, just sorting for table data for now.
    * Fixed bug with Sarissa.updateContentFromNode(), thanks to Javinto 
      (SF user) andHartmut Wynen for finding the bug and solution respectively. 

0.9.9
    * Fixed errors in Sarissa.updateContentFromForm (that's what you get for 
      not keeping your unit tests up to date)
    * Two distributions now exist: a JAR artifact for for Maven users 
      (sarissa-VERSION.jar) and one for generic projects that also includes the 
      documentation (sarissa-full-VERSION.zip)
    * Changed XSLT output behavior in XSLTProcessor to follow the spec (or rather, 
      let the browser do do ;-) thanks to Doug D (dougdomeny)
    * Fixed document.importNode for IE thanks to Duncan Booth
    
0.9.8.1
    * Fixed pickRecentProgID variable scope and JSLint compliance thanks to Duncan Booth
    * Fixed included/imported stylesheet along with the document() function for 
      MSXML 3.0 thanks to a bug report by zizo1 (sf user)
    * Added compressed versions of all script files; they are created automatically
      thanks to the MobilVox Maven JavaScript Plugin, see
      http://www.mobilvox.com/projects/maven-js-plugin/
    * Added syntax highlighting to the HOWTOs thanks to the integration of SyntaxHighlighter
      by Alex Gorbatchev to our custom Maven skin, see 
      http://code.google.com/p/syntaxhighlighter/


0.9.8.0
    * Changed importStylesheet for IE thanks to dougdomeny. 
    * Fixed XSLT parameter clearing bugs thanks to Vitaliy Ischenko
    * Added support for Javeline's XPath/XSLT compatibility library thanks 